Fix rebase issues